Готовая змейка и gui с помощью qt, осталось рефакторинг и мелкие фиксы

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(BrickGameV2.0
     brick_game/tetris/tetris.c
     brick_game/tetris/txtscore.c
     brick_game/tetris/lib_spec.c
+    brick_game/snake/snake.cpp
     gui/cli/user_screen.c
     gui/desktop/desktop_screen.cpp
 )
